# OpenAI-Test-

./: .gitignore  README.md  pyproject.toml
question_generator/api/: admin.py  models.py  serializer.py  urls.py  views.py
question_generator/api/core/: answer.py  question.py
question_generator/api/migrations/: 0001_initial.py  0002_alter_result_result.py  0003_alter_result_result.py
question_generator/question_generator/: asgi.py  settings.py  urls.py  wsgi.py
